--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:J2MsPWaZoWiWGhUrIpVAcH24iDPgI31NFe0bJYLP28k=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=d83305.mysql.zonevs.eu
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=d83305_books
+DB_USERNAME=d83305sa325721
+DB_PASSWORD=dfasdfadsfasdfwqerf
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
