--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "autoprefixer": "^10.2.1",
+        "php": "^1.0.1",
         "tailwindcss": "^2.0.2"
     }
 }
